--- a/nodeapi/views/index.html
+++ b/nodeapi/views/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><%= titulo %></h1>
-    <p>Welcome to <%= titulo %></p>
+    <p><%= __('Welcome to') %> <%= titulo %></p>
 
     <h3>Valor</h3>
     <p><%= valor %></p>
