nueva página privado

--- a/nodeapi/views/header.html
+++ b/nodeapi/views/header.html
@@ -52,9 +52,12 @@
               <a class="nav-link js-scroll-trigger" href="/about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="/login">Login</a>
             </li>
-          </ul>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/privado">Privado</a>
+            </li>
+            </ul>
         </div>
       </div>
     </nav>
