--- a/nodeapi/views/header.html
+++ b/nodeapi/views/header.html
@@ -57,7 +57,10 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="/privado">Privado</a>
             </li>
-            </ul>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/logout">Logout</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
