formulario (MPA) de envio e email

--- a/nodeapi/views/privado.html
+++ b/nodeapi/views/privado.html
@@ -4,6 +4,15 @@
   <div class="cta-content">
     <div class="container">
       <h2>Mi espacio privado.</h2>
+
+      <!-- Llamada con formulario (MPA) -->
+      <form action="privado/sendEmail" method="POST">
+        <input type="text" name="texto">
+        <button type="submit">Mandame un email con formulario (MPA)</button>
+      </form>
+
+
+
     </div>
   </div>
   <div class="overlay"></div>
